# luz

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  conversions.c  copyToSSH.sh  cornell.luz  demo.luz  miniRT.c  miniRT.h  readers.c  readers.h  scene_reader.c  typedefs.h  utils.c
.github/workflows/: ci.yml  release.yml
benchmarks/: compare.sh  score.sh
docker/: build.sh
docker/benchmark/: Dockerfile  benchmark.sh  run.sh
docs/: benchmarks.md  blender-exporter.md  scene-files.md
examples/scenes/: atmosphere_from_space.luz  blender_monkey.luz  cornell.luz  demo.luz  earth.luz  earth_atmosphere.luz  koenigsegg.luz  mandalorian_helmet.luz  rtiow.luz  sphere_world.luz  suzanne.luz  underwater_caustics.luz  volumetric_godrays.luz  volumetric_gray_sphere_white_bg.luz  volumetric_spotlight_fog.luz
examples/textures/: earth_diff_jpg.ppm
exports/: stormtroopers.luz
include/luz/: AABB.hpp  ANSIColors.hpp  AssetPath.hpp  Atmosphere.hpp  Camera.hpp  Color.hpp  ColorManagement.hpp  ColorScience.hpp  Defaults.hpp  EnvironmentMap.hpp  FlagsParser.hpp  IESProfile.hpp  Image.hpp  LightUnits.hpp  MeasuredMaterials.hpp  OBJReader.hpp  ONB.hpp  OutputFormat.hpp  Random.hpp  Sampler.hpp  SkyTypes.hpp  SmartArray.hpp  Texture.hpp  Utilities.hpp  Vector3.hpp
includes/: AABB.hpp  ANSIColors.hpp  Atmosphere.hpp  BMP.hpp  BVHNode.hpp  Camera.hpp  Clock.hpp  Color.hpp  CosinePDF.hpp  Defaults.hpp  Exit.hpp  FileHandling.hpp  FlagsParser.hpp  Font.hpp  HitUtils.hpp  Hittable.hpp  HittablePDF.hpp  Image.hpp  Light.hpp  Luz.hpp  MLXImage.hpp  Material.hpp  MixturePDF.hpp  OBJReader.hpp  ONB.hpp  Object.hpp  PDF.hpp  Random.hpp  Ray.hpp  RefractiveIndexes.hpp  Renderer.hpp  Scene.hpp  SceneFile.hpp  SequenceRenderer.hpp  SkyTypes.hpp  SmartArray.hpp  SystemSpecifics.hpp  TIFF.hpp  Transform.hpp  Utilities.hpp  (+10 more)
includes/Blur/: Gaussian.hpp
includes/CUDA/: CheckCudaErrors.hpp  CudaRender.hpp  CudaUtils.hpp
includes/Charts/: Bar.hpp  Charts.hpp
includes/Forms/: ConstantVolume.hpp  Cube.hpp  Cylinder.hpp  Mesh.hpp  Plane.hpp  (+4 more)
scenes/: cornell.luz  debug.rt  deer.rt  minimalist_m.rt  sp.rt  spheres.rt
scripts/: release.sh
srcs/: AABB.cpp  Atmosphere.cpp  BMP.cpp  BVHNode.cpp  Camera.cpp  Clock.cpp  Color.cpp  CosinePDF.cpp  ExitError.cpp  FlagsParser.cpp  Font.cpp  HitUtils.cpp  Hittable.cpp  HittablePDF.cpp  Image.cpp  Light.cpp  MLXImage.cpp  Material.cpp  MixturePDF.cpp  OBJReader.cpp  ONB.cpp  Random.cpp  Ray.cpp  Renderer.cpp  Renderer.cu  Scene.cpp  SceneFile.cpp  SequenceRenderer.cpp  TIFF.cpp  Transform.cpp  Utilities.cpp  Vector2.cpp  Vector3.cpp  algebra.c  bmp.c  camera_utils.c  color_utils.c  conversions.c  cylinder_utils.c  exit.c  (+22 more)
tests/: Dockerfile  Tests.cpp  docker-compose.yml  test_blender_export_luz.py
tools/: blender_export_luz.py  bmp_metrics.py  zip_current_dir_to_ssh.sh
(+282 files in other folders)
